# my_playwrightBrowser

./: README.md  main.py  pyproject.toml
playwrightBrowser/: __init__.py  base.py  click.py  current_page.py  extract_hyperlinks.py  extract_text.py  get_elements.py  navigate.py  navigate_back.py  utils.py
