[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-playwrightbrowser"
version = "0.1.0"
description = "A small toolkit of Playwright-based browser automation helpers."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "playwright>=1.56.0",
    "pydantic>=2.12.4",
]
authors = [
    { name = "KRIShark Development" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["playwrightBrowser*"]
